--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -159,6 +159,14 @@
     color: #fff;
 }
 
+.add-to-card-btn:hover {
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    background-color: #fff;
+    color: black;
+}
+
 /* flower-and-plant-lovers */
 
 .flower-and-plant-lovers {
