--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -422,6 +422,10 @@
         font-size: 18px;
     }
 
+    .nav-options ul li:nth-child(4) {
+        text-align: center;
+    }
+
     .container {
         margin: 10px auto;
     }
