--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -551,7 +551,7 @@
     }
 
     .join-the-colorful-bunch-input-feild input {
-        padding: 10px 10px;
+        padding: 0;
         font-size: 1rem;
     }
 
