--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -468,8 +468,12 @@
     .our-plants-cards {
         grid-template-columns: repeat(2, 1fr);
         max-width: 100%;
-        gap: 10px;
+        gap: 5px;
         margin-top: 0px;
+    }
+
+    .our-plants-cards .card {
+        padding: 10px;
     }
 
     .card img {
